--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,15 @@
 name: Deploy to VPS
 
+on:
+  push:
+    branches:
+      - development
+  pull_request:
+    types:
+      - closed
+
 jobs:
   deploy:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     runs-on: ubuntu-latest
 
     steps:
